--- a/index.html
+++ b/index.html
@@ -112,23 +112,24 @@
       margin-top:6px;
     }
 
-    /* remove all link outlines / boxes */
+    /* MATCH LINKS TO THE STATS (same style except colour) */
     .popup-link{
       color:#3899EC;
-      font-weight:600;
+      font-weight:800;     /* match stats */
+      font-size:12px;      /* match stats */
+      line-height:1.2;     /* match stats */
       text-decoration:none;
       white-space:nowrap;
-      font-size:12px;
-      outline:none !important;
-      box-shadow:none !important;
-      border:none !important;
+      outline:none!important;
+      box-shadow:none!important;
+      border:none!important;
     }
 
     .popup-link:focus,
     .popup-link:active{
-      outline:none !important;
-      box-shadow:none !important;
-      border:none !important;
+      outline:none!important;
+      box-shadow:none!important;
+      border:none!important;
     }
 
     @media (max-width:440px){
