--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     .popup-heading{
       font-weight:800;
       font-size:11px;
-      margin:0 0 6px;
+      margin:2px 0 6px 0; /* ★ moved title down by exactly 2px */
       color:#1E1E1E;
     }
 
@@ -84,7 +84,7 @@
       gap:3px;
       align-items:center;
       transform: translateY(1px);
-      margin-top:2px; /* ★ moves the entire block down by 2px */
+      margin-top:2px;
     }
 
     .spec-row{
@@ -188,7 +188,6 @@ const map = new mapboxgl.Map({
 });
 map.addControl(new mapboxgl.NavigationControl(),"bottom-right");
 
-/* Hover system */
 const markerElsById = {};
 const routeLayerId  = {};
 let hoveredId = null;
